syntax = "proto3";

package device.v1;

service DeviceService{
  rpc GetProcesses (GetProcessesRequest) returns (GetProcessesResponse){}
  rpc StreamProcesses (StreamProcessesRequest) returns (stream StreamProcessesResponse){}
  rpc GetDevices(GetDevicesRequest) returns (GetDevicesResponse){}
  rpc KillGpuProcess(KillGpuProcessRequest) returns (KillGpuProcessResponse){}
  rpc PatchConfigs(PatchConfigsRequest) returns (PatchConfigsResponse){}
  rpc GetMetaDeviceInfo(GetMetaDeviceInfoRequest) returns (GetMetaDeviceInfoResponse){}

  rpc PingServer(PingServerRequest) returns (PingServerResponse){}

}

message DeviceProcess{
  string uuid = 1;
  uint32 pid = 2;
  uint64 memory = 3;
  string cmdline = 4;
  string user = 5;
  string container_id = 6;
  string pod_name = 7;
  string pod_namespace = 8;
  int64 metagpu_requests = 9;
  uint32 gpu_utilization = 10;
  string resource_name = 11;
  string node_name = 12;
}
message Device{
  string uuid = 1;
  uint32 index = 2;
  uint32 shares = 3;
  uint32 gpu_utilization = 4;
  uint32 memory_utilization = 5;
  uint64 memory_total = 6;
  uint64 memory_free = 7;
  uint64 memory_used = 8;
  uint64 memory_share_size = 9;
  string resource_name = 10;
  string node_name = 11;
}
message StreamProcessesRequest{
  string pod_id = 1;
}
message StreamProcessesResponse{
  string visibility_level = 1;
  repeated DeviceProcess devices_processes = 2;
}

message GetProcessesRequest{
  string pod_id = 1;
}
message GetProcessesResponse{
  string visibility_level = 1;
  repeated DeviceProcess devices_processes = 2;
}

message KillGpuProcessRequest{
  uint32 pid = 1;
}
message KillGpuProcessResponse{}

message PatchConfigsRequest{
  int32 meta_gpus = 1;
}
message PatchConfigsResponse{}

message GetDevicesRequest{}
message GetDevicesResponse{
  map<string, Device> device = 1;
}

message GetMetaDeviceInfoRequest{}
message GetMetaDeviceInfoResponse{
  string node = 1;
  map<string, string> metadata = 2;
  repeated Device devices = 3;
}

message PingServerRequest{}
message PingServerResponse{}
